--- a/suppression.css
+++ b/suppression.css
@@ -46,7 +46,7 @@ a {
 .btn {
   position: relative;
   font-size: 17px;
-
+  cursor: pointer;
   text-decoration: none;
   padding: 1em 2.5em;
   display: inline-block;
@@ -56,7 +56,7 @@ a {
   font-family: sans-serif;
   font-weight: 500;
   color: white;
-  background-color: red;
+  background-color: #008000;
 }
 
 .btn:hover {
@@ -67,28 +67,6 @@ a {
 .btn:active {
   transform: translateY(-1px);
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-}
-
-.btn::after {
-  content: "";
-  display: inline-block;
-  height: 100%;
-  width: 100%;
-  border-radius: 100px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-  transition: all 0.4s;
-}
-
-.btn::after {
-  background-color: #ffffff;
-}
-
-.btn:hover::after {
-  transform: scaleX(1.4) scaleY(1.6);
-  opacity: 0;
 }
 
 form {
